--- a/src/footer.html
+++ b/src/footer.html
@@ -2,7 +2,7 @@
     <div class="row" id="footer">
         <p>Đại Học Khoa Học Tự Nhiên <br>217 Nguyễn Văn Cừ, Quận 5, Thành Phố Hồ Chí Minh</p>
         <div class="col" id="footer-help">
-            <a href="about.html">
+            <a href="#">
                 <h6>GIỚI THIỆU TÔI VỀ SNEAKERS SALES</h6>
             </a>
             <a href="#">
